--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-  <script src="nouislider/nouislider.js"></script>
-  <script src="pristine/pristine.min.js"></script>
+  <script src="pristine/pristine.min.js" defer></script>
+  <script src="nouislider/nouislider.js" defer></script>
   <script src="js/main.js" type="module"></script>
 </body>
 </html>
